2007-05-21  Miklos Szeredi <miklos@szeredi.hu>

	* Fix Oops or error if a regular file is created with mknod(2) on
	a fuse filesystem.  Kernels 2.6.18 onward are affected.  Thanks to
	J. Cameijo Cerdeira for the report

2007-05-16  Miklos Szeredi <miklos@szeredi.hu>

	* Fix one more bashism in mount.fuse.  Debian Bug#424435.
	Reported by Soeren Sonnenburg

2007-04-28  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.6.5

2007-04-28  Miklos Szeredi <miklos@szeredi.hu>

	* Fix in typo in mount.fuse.  Reported by Jakub Moc

2007-04-27  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.6.4

2007-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Ublock SIGHUP in multithreaded loop, since it's needed for
	exiting on unmount.  Reported by Elena

2007-04-18  Miklos Szeredi <miklos@szeredi.hu>

	* Use patch from Debian Bug#413403 to fix problems with bash in
	mount.fuse

2007-04-15  Miklos Szeredi <miklos@szeredi.hu>

	* Add -lulockmgr to compilation comment in fusexmp_fh.c

2007-04-05  Miklos Szeredi <miklos@szeredi.hu>

	* mount.fuse should handle spaces in paths.  Debian Bug#417834.
	Reported by Alexander Blazej

	* Use "fusectl" as the device for the fusectl filesystem.  Debian
	Bug#417945.  Reported by Laurent Bonnaud

2007-03-05  Miklos Szeredi <miklos@szeredi.hu>

	* mount.fuse should use /bin/bash.  Debian Bug#413403.  Reported
	by Thomas Weinbrenner

2007-02-26  Miklos Szeredi <miklos@szeredi.hu>

	* Fix detection of installed fuse in init script.  Reported and
	fix suggested by Davide Canova

2007-02-05  Miklos Szeredi <miklos@szeredi.hu>

	* Fix 2.6.9 RHEL kernels, which have compatibility mutex.h, but
	don't define mutex_destroy(), bummer.  Patch from Phil Schwan

	* Fix option parsing in mount.fuse.  Patch from Jens M. Noedler

2007-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.6.3

2007-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* Compile fuseblk for kernels which don't have an option to turn